New tmux version changed syntax

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -24,10 +24,7 @@ bind | split-window -h
 bind - split-window -v
 
 # turn off mouse stuffs (is this needed?)
-setw -g mode-mouse off
-set -g mouse-select-pane off 
-set -g mouse-resize-pane off 
-set -g mouse-select-window off
+setw -g mouse off
 
 # apparently we need this for colors to work?
 set -g default-terminal "xterm-256color"
